--- a/src/views/app/style.css
+++ b/src/views/app/style.css
@@ -44,6 +44,7 @@
 #app div.board {
   display: flex;
   justify-content: center;
+  transform: rotate(-90deg);
 }
 
 #app div.board div#chessBoard {
@@ -53,6 +54,11 @@
   height: 32rem;
   width: 32rem;
   background-color: gray;
+}
+
+#app div.board div#chessBoard.BLACK {
+  flex-direction: row-reverse;
+  transform: scaleY(-1);
 }
 
 #app div.board div#chessBoard div.cell {
@@ -69,7 +75,16 @@
 }
 
 #app div.board div#chessBoard button.cellButton {
+  position: absolute;
+  border: none;
   height: 4rem;
   width: 4rem;
   background-color: transparent;
+  z-index: 10;
+}
+
+#app div.board div#chessBoard img.pieceImg {
+  margin-left: 0.3rem;
+  height: 4rem;
+  transform: rotate(90deg);
 }
