--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap');
 
 :root {
-  --bg: #fafafa;
-  --text-color: #010101;
+  --bg: #293241;
+  --bg-button: #3C91E6;
+  --bg-button-border: #3278be;
+  --text-color: #FAFAFA;
+  --cellBlack: #85aa53;
+  --cellWhite: #e8e7e6;
 }
 
 * {
