--- a/src/views/app/style.css
+++ b/src/views/app/style.css
@@ -108,9 +108,12 @@
   background-color: transparent;
   z-index: 10;
 }
-
 #app div.board div#chessBoard img.pieceImg {
-  margin-left: 0.3rem;
   height: 4rem;
   transform: rotate(90deg);
+}
+
+#app div.board div#chessBoard.BLACK .pieceContainer {
+  transform: scaleY(-1);
+  display: flex;
 }
