--- a/src/views/app/style.css
+++ b/src/views/app/style.css
@@ -108,6 +108,11 @@
   background-color: transparent;
   z-index: 10;
 }
+
+#app div.board div#chessBoard button.cellButton:focus{
+  outline-style: none;
+}
+
 #app div.board div#chessBoard img.pieceImg {
   height: 4rem;
   transform: rotate(90deg);
