--- a/src/views/app/style.css
+++ b/src/views/app/style.css
@@ -32,6 +32,7 @@
 #app div.input label {
   font-size: 0.8rem;
   padding-left: 0.5rem;
+  margin-bottom: 0.3rem;
 }
 
 #app div.input input {
@@ -62,4 +63,213 @@
   display: flex;
   justify-content: center;
   transform: rotate(-90deg);
+}
+
+@media (max-width: 1024px) and (orientation: portrait) {
+  #app div.name h1 {
+    font-size: 7rem;
+    padding: 5rem;
+    margin-top: 15vh;
+  }
+
+  #app div.input label {
+    font-size: 1.5rem;
+  }
+  
+  #app div.input input {
+    font-size: 1.6rem;
+    padding: 0.7rem 0.9rem;
+  }
+
+  #app div.form button {
+    font-size: 2.7rem;
+    border-bottom: 0.2rem solid var(--bg-button-border);
+    padding: 1.3rem 5.8rem;
+  }
+
+  #app div.waitingOpponent h1 {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 768px) and (orientation: portrait) {
+  #app div.name h1 {
+    font-size: 6rem;
+    padding: 4rem;
+  }
+
+  #app div.input label {
+    font-size: 1.2rem;
+  }
+  
+  #app div.input input {
+    font-size: 1.4rem;
+    padding: 0.5rem 0.7rem;
+  }
+
+  #app div.form button {
+    font-size: 2.2rem;
+    border-bottom: 0.2rem solid var(--bg-button-border);
+    padding: 1rem 4.5rem;
+  }
+
+  #app div.waitingOpponent h1 {
+    font-size: 2.5rem;
+  }
+}
+
+@media (max-width: 540px) {
+  #app div.name h1 {
+    font-size: 4rem;
+    padding: 2.5rem;
+  }
+
+  #app div.input label {
+    font-size: 1rem;
+  }
+  
+  #app div.input input {
+    font-size: 1.2rem;
+    padding: 0.5rem 0.5rem;
+  }
+
+  #app div.form button {
+    font-size: 1.5rem;
+    border-bottom: 0.2rem solid var(--bg-button-border);
+    padding: 0.7rem 4rem;
+  }
+
+  #app div.waitingOpponent h1 {
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 360px) and (orientation: portrait) {
+  #app div.name h1 {
+    font-size: 3rem;
+    padding: 2rem;
+  }
+
+  #app div.input label {
+    font-size: 0.8rem;
+  }
+  
+  #app div.input input {
+    font-size: 1rem;
+    padding: 0.5rem 0.5rem;
+  }
+
+  #app div.form button {
+    font-size: 1.3rem;
+    border-bottom: 0.2rem solid var(--bg-button-border);
+    padding: 0.5rem 3.5rem;
+  }
+
+  #app div.waitingOpponent h1 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-height: 1024px) and (orientation: landscape) {
+  #app div.name h1 {
+    font-size: 6rem;
+    padding: 8rem;
+  }
+
+  #app div.input label {
+    font-size: 1.5rem;
+  }
+  
+  #app div.input input {
+    font-size: 1.6rem;
+    padding: 0.7rem 0.9rem;
+  }
+
+  #app div.form button {
+    font-size: 2.7rem;
+    border-bottom: 0.2rem solid var(--bg-button-border);
+    padding: 1.3rem 5.8rem;
+  }
+
+  #app div.waitingOpponent h1 {
+    font-size: 3rem;
+  }
+}
+
+@media (max-height: 768px) and (orientation: landscape) {
+  #app div.name h1 {
+    font-size: 5rem;
+    padding: 6rem;
+  }
+
+  #app div.input label {
+    font-size: 1.2rem;
+  }
+  
+  #app div.input input {
+    font-size: 1.4rem;
+    padding: 0.5rem 0.7rem;
+  }
+
+  #app div.form button {
+    font-size: 2.2rem;
+    border-bottom: 0.2rem solid var(--bg-button-border);
+    padding: 1rem 4.5rem;
+  }
+
+  #app div.waitingOpponent h1 {
+    font-size: 2.5rem;
+  }
+}
+
+@media (max-height: 540px) {
+  #app div.name h1 {
+    font-size: 3rem;
+    padding: 4rem;
+  }
+
+  #app div.input label {
+    font-size: 1rem;
+  }
+  
+  #app div.input input {
+    font-size: 1.2rem;
+    padding: 0.5rem 0.5rem;
+  }
+
+  #app div.form button {
+    font-size: 1.5rem;
+    border-bottom: 0.2rem solid var(--bg-button-border);
+    padding: 0.7rem 4rem;
+  }
+
+  #app div.waitingOpponent h1 {
+    font-size: 2rem;
+  }
+}
+
+@media (max-height: 360px) and (orientation: landscape) {
+  #app div.name h1 {
+    font-size: 2.5rem;
+    padding: 2rem;
+  }
+
+  #app div.input label {
+    font-size: 0.8rem;
+  }
+  
+  #app div.input input {
+    font-size: 1rem;
+    padding: 0.5rem 0.5rem;
+  }
+
+  #app div.form button {
+    font-size: 1.3rem;
+    border-bottom: 0.2rem solid var(--bg-button-border);
+    padding: 0.5rem 3.5rem;
+  }
+
+  #app div.waitingOpponent h1 {
+    font-size: 1.5rem;
+  }
 }
